# ontology

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ontology.yaml  pyproject.toml  query.py  relations.yaml  relations.yaml.bak  skills-lock.json  visualize.py
.rag/: README.md
.rag/manifests/: notes_credit_assignment.sections.json  notes_evolutionary_strategies.sections.json  notes_information_processing.sections.json  notes_interaction.sections.json  notes_krr.sections.json  notes_physical_world.sections.json  notes_representation.sections.json  notes_search.sections.json
.rag/reviews/: notes_credit_assignment.section-review.md  notes_evolutionary_strategies.section-review.md  notes_information_processing.section-review.md  notes_interaction.section-review.md  notes_krr.section-review.md  notes_physical_world.section-review.md  (+2 more)
artifacts/: concept_priority_2026-05-11.md  flashcards_credit_assignment.html  flashcards_full.html  flashcards_module_1.html  flashcards_physical_world.html  quiz_physical_world.html  study_schedule_2026-05-11.md
knowledge-base/: documents.yaml  mastery.yaml  metadata.yaml  nodes.yaml  relation-schema.yaml  relations.yaml  study_priority.yaml  study_schedule.yaml
learner-model/: beliefs.yaml  justifications.yaml  profile.yaml
ontology_core/: __init__.py  knowledge_base.py  learner_model.py  notes.py  paths.py  server.py  yaml_io.py
scripts/: _bootstrap.py  build_db.py  concept_ranker.py  config.py  flashcard_generator.py  rag.py  rename_relation_type.py  serve.py  study_scheduler.py
tests/: test_visualize.py
web/: index.html
(+25 files in other folders)
