[project]
name = "ontology"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "llama-index>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "peft>=0.19.1",
    "pypdf>=6.10.2",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "sqlite-utils>=3.39",
]
